2012-08-10  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [CMAKE] Fix wrong idl include path in CMakeList.txt
        https://bugs.webkit.org/show_bug.cgi?id=93715

        Reviewed by Rob Buis.

        No new tests. No change in behavior.

        * CMakeLists.txt: Fix notifications path.

2012-08-10  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        [Transforms] Hit test issue with large scale() transform
        https://bugs.webkit.org/show_bug.cgi?id=23170

        Reviewed by Simon Fraser.

        By using normal rounding to determine the top-left corner of the
        hit-tested rectangle, we end up offsetting the hit test by up to
        half a pixel, once scaled to x60, this creates a 30px error.

        Normal rounding is replaced with floored rounding which means the
        hit-tested pixel will now always be the pixel containing the
        point.

        Test: fast/transforms/hit-test-large-scale.html

        * rendering/HitTestResult.cpp:
        (WebCore::HitTestPoint::HitTestPoint):
        (WebCore::HitTestPoint::intersectsRect):
        (WebCore::HitTestPoint::rectForPoint):

2012-08-10  Florin Malita  <fmalita@chromium.org>

        Unreviewed gardening: build fix for 32bit platforms after 125294.

        * css/StyleResolver.cpp:
        (RuleData):

2012-08-10  Takashi Sakamoto  <tasak@google.com>

        box-shadow creates incorrect shadow when border-radius is too large
        https://bugs.webkit.org/show_bug.cgi?id=72103

        Reviewed by Simon Fraser.

        Added a code for adjusting a rounded rect before paintBoxShadow in
        a similar way to getRoundedRectFor.

        Test: fast/borders/border-shadow-large-radius.html

        * platform/graphics/RoundedRect.cpp:
        (WebCore::RoundedRect::adjustRadii):
        Added a new method to set radii's scale to fit into rect.
        * platform/graphics/RoundedRect.h:
        (RoundedRect):
        * rendering/RenderBoxModelObject.cpp: